[package]
name = "nuage_detection"
version = "0.1.0"
authors = ["Victor Chanfrault <victor.chanfrault@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = ""
show-image = ""

[[bin]]
name = "nuage_detection"
path = "src/main.rs"

[[bin]]
name = "nuage_detection_gui"
path = "src/main_gui.rs"
default-run = true